--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="photo-container">
             <div class="color-overlay"></div>
-            <img class="personal-photo" src="/src/images/foto-minha.png" alt="foto pessoal">        
+            <img class="personal-photo" src="./src/images/foto-minha.png" alt="foto pessoal">        
         </div>
 
         <section class="about-section" id="about">
