Portfolio link correction

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <header class="header">
         <div class="header-container">
-            <a href="/">
+            <a href="/portfolio-page/">
                 <h1 class="logo">Portfólio</h1>
             </a>
                 
