--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li><a href="#about"><span>01.</span>Sobre</a></li>
                     <li><a href="#abilities"><span>02.</span>Habilidades</a></li>
                     <li><a href="#projects"><span>03.</span>Projetos</a></li>
-                    <li><a href="/portfolio-page/" class="resume-link" target="_blank">CURRÍCULO</a></li>
+                    <li><a href="" class="resume-link">CURRÍCULO</a></li>
                 </ul>
             </nav>
 
