--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
                 <div class="weather-project projects">
                     <h3>PREVISÃO DO TEMPO</h3>
                     <p>Página web desenvolvida para consulta da previsão do tempo, livre de anúncios.</p>
-                    <a class="project-link" href="https://alex-lima84.github.io/weather-api-website/" target="_blank">
-                        <img src="./src/images/previsão-do-tempo.jpg" alt="imagem site previsão do tempo" />
+                    <a class="project-link" href="https://my-weather-forecast.vercel.app/" target="_blank">
+                        <img src="./src/images/previsao-do-tempo.png" alt="imagem site previsão do tempo" />
                     </a>
-                    <a class="repository-link" href="https://github.com/Alex-Lima84/weather-api-website"
+                    <a class="repository-link" href="https://github.com/Alex-Lima84/weather-forecast"
                         target="_blank">Repositório do projeto</a>
                 </div>
 
                 <div class="github-project projects">
-                    <h3>GITHUB</h3>
+                    <h3>CONSULTA GITHUB</h3>
                     <p>Página web desenvolvida para consulta de dados de usuários do Github.</p>
                     <a class="project-link" href="https://alex-lima84.github.io/fetch-github-api/" target="_blank">
                         <img src="./src/images/github-api.png" alt="imagem site consulta Github " />
@@ -153,7 +153,7 @@
                 </div>
 
                 <div class="landing-page-project projects">
-                    <h3>POKEMON</h3>
+                    <h3>CONSULTA POKEMON</h3>
                     <p>Página web desenvolvida para consulta de dados de Pokemons.</p>
                     <a class="project-link" href="https://pokemon-project-api.netlify.app/" target="_blank">
                         <img src="./src/images/pokemon-project.png" alt="imagem site pokemon" />
